# doubleaxe

./: .gitmodules  .travis.yml  .ycm_extra_conf.py  Dockerfile  meson.build
doubleaxe/: doubleaxe.hpp  meson.build
doubleaxe/test/: test_doubleaxe.cpp
gimli/: gimli.cpp  gimli.hpp
gimli/test/: test_gimli.cpp
primitives/gimli/: gimli.cpp  gimli.hpp  meson.build
primitives/gimli/test/: test_gimli.cpp
primitives/sponge/: meson.build  sponge.hpp
primitives/sponge/test/: test_sponge.cpp
tools/: catch.hpp
